--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                                     </h3>
                                     <div class="d-flex">
                                         <div class="profile-testi mt-3">
-                                            <img src="/images/img-profile.svg" class="rounded-circle" alt="">
+                                            <img src="images/img-profile.svg" class="rounded-circle" alt="">
                                             <div class="d-block">
                                                 <h3>
                                                     Camella Sarah
@@ -411,7 +411,7 @@
                                     </h3>
                                     <div class="d-flex">
                                         <div class="profile-testi mt-3">
-                                            <img src="/images/img-profile.svg" class="rounded-circle" alt="">
+                                            <img src="images/img-profile.svg" class="rounded-circle" alt="">
                                             <div class="d-block">
                                                 <h3>
                                                    Nabila Apriyani
