--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                                     </h3>
                                     <div class="d-flex">
                                         <div class="profile-testi mt-3">
-                                            <img src="images/img-profile.svg" class="rounded-circle" alt="">
+                                            <img src="images/img-profile.png" class="rounded-circle" alt="">
                                             <div class="d-block">
                                                 <h3>
                                                     Camella Sarah
@@ -410,7 +410,7 @@
                                     </h3>
                                     <div class="d-flex">
                                         <div class="profile-testi mt-3">
-                                            <img src="images/img-profile.svg" class="rounded-circle" alt="">
+                                        <img src="images/img-profile.png" class="rounded-circle" alt="">
                                             <div class="d-block">
                                                 <h3>
                                                    Nabila Apriyani
