--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="col-12 col-md-6 col-lg-6 order-md-2">
                     <div class="hero-pic animate__animated animate__bounce">
                         <div class="video-play">
-                            <button class="video hero-cta"></button>
+                            <button type="button" class="video video-btn" data-bs-toggle="modal" data-bs-target="#myModal"></button>
                             <img src="images/pic.png" class="img-fluid" alt="">
                         </div>
                     </div>
@@ -73,6 +73,22 @@
                             yourself, the happiness is priceless.
                         </p>
                         <a href="/" class="btn btn-primary py-2 px-4">Decide a Menu</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Modal video-->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <!-- 16:9 aspect ratio -->
+                    <div class="ratio ratio-16x9">
+                    <iframe src="https://www.youtube.com/embed/vou24SNu1e0" title="YouTube video player"
+                        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
@@ -581,13 +597,13 @@
 
     
     <!--Script-->
-    <script src="script/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.slim.min.js" integrity="sha512-6ORWJX/LrnSjBzwefdNUyLCMTIsGoNP6NftMy2UAm1JBm6PRZCO1d7OHBStWpVFZLO+RerTvqX/Z9mBFfCJZ4A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-        <script>
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+    <script src="script/script.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
             AOS.init();
         </script>
 </body>
