--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav justify-content-start">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Beverages</a>
+                        <a class="nav-link" href="/beverages.html">Beverages</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Chef</a>
