--- a/beverages.html
+++ b/beverages.html
@@ -29,10 +29,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav justify-content-start">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/beverages.html">Beverages</a>
+                        <a class="nav-link active" href="beverages.html">Beverages</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Chef</a>
