--- a/detail.html
+++ b/detail.html
@@ -29,10 +29,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav justify-content-start">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/beverages.html">Beverages</a>
+                        <a class="nav-link active" href="beverages.html">Beverages</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Chef</a>
@@ -80,7 +80,7 @@
                         <img src="images/pic.png" class="img-fluid" alt="">
                     </div>
                     <div class="row">
-                        <div class="col-12 col-md-6 col-lg-6">
+                        <div class="col-12 col-md-8 col-lg-8">
                             <div class="description-video">
                                 <h2>
                                     About Course
@@ -93,38 +93,152 @@
                                 </p>
                             </div>
                             <div class="sylabus-video">
+                                <h2>
+                                    Syllabus
+                                </h2>
                                 <div class="accordion accordion-flush" id="accordionFlushExample">
                                     <div class="accordion-item">
                                       <h2 class="accordion-header" id="flush-headingOne">
                                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                                          Accordion Item #1
+                                            Review the Receipt
                                         </button>
                                       </h2>
                                       <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                                        <div class="accordion-body">
+                                            <button type="button" class="accordion-play"><span>Introduction</span><i class="bi bi-play"></i></button>
+                                        </div>
+                                        <div class="accordion-body">
+                                            <button type="button" class="accordion-play"><span>Key points</span><i class="bi bi-play"></i></button>
+                                        </div>
+                                        <div class="accordion-body">
+                                            <button type="button" class="accordion-play"><span>Download the guide</span><i class="bi bi-lock"></i></button>
+                                        </div>
                                       </div>
-                                    </div>
+                                    </div>                                   
                                     <div class="accordion-item">
                                       <h2 class="accordion-header" id="flush-headingTwo">
                                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                                          Accordion Item #2
+                                            Prepare the ingredients
                                         </button>
                                       </h2>
                                       <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                                        <div class="accordion-body">
+                                            <button type="button" class="accordion-play"><span>Introduction</span><i class="bi bi-play"></i></button>
+                                        </div>
+                                        <div class="accordion-body">
+                                            <button type="button" class="accordion-play"><span>Introduction</span><i class="bi bi-play"></i></button>
+                                        </div>
+                                        <div class="accordion-body">
+                                            <button type="button" class="accordion-play"><span>Introduction</span><i class="bi bi-lock"></i></button>
+                                        </div>
                                       </div>
-                                    </div>
+                                    </div>                                   
                                     <div class="accordion-item">
                                       <h2 class="accordion-header" id="flush-headingThree">
                                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                                          Accordion Item #3
+                                            Warm the foods
                                         </button>
                                       </h2>
                                       <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                                        <div class="accordion-body">
+                                            <button type="button" class="accordion-play"><span>Introduction</span><i class="bi bi-play"></i></button>
+                                        </div>
+                                        <div class="accordion-body">
+                                            <button type="button" class="accordion-play"><span>Introduction</span><i class="bi bi-play"></i></button>
+                                        </div>
+                                        <div class="accordion-body">
+                                            <button type="button" class="accordion-play"><span>Introduction</span><i class="bi bi-lock"></i></button>
+                                        </div>
                                       </div>
-                                    </div>
+                                    </div>                                   
+                                    <div class="accordion-item">
+                                      <h2 class="accordion-header" id="flush-headingFour">
+                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                                            Present the result
+                                        </button>
+                                      </h2>
+                                      <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+                                        <div class="accordion-body">
+                                            <button type="button" class="accordion-play"><span>Introduction</span><i class="bi bi-play"></i></button>
+                                        </div>
+                                        <div class="accordion-body">
+                                            <button type="button" class="accordion-play"><span>Introduction</span><i class="bi bi-play"></i></button>
+                                        </div>
+                                        <div class="accordion-body">
+                                            <button type="button" class="accordion-play"><span>Introduction</span><i class="bi bi-lock"></i></button>
+                                        </div>
+                                      </div>
+                                    </div>                                   
+                                    <div class="accordion-item">
+                                      <h2 class="accordion-header" id="flush-headingFive">
+                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+                                            Asking a feedback
+                                        </button>
+                                      </h2>
+                                      <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
+                                        <div class="accordion-body">
+                                            <button type="button" class="accordion-play"><span>Introduction</span><i class="bi bi-play"></i></button>
+                                        </div>
+                                        <div class="accordion-body">
+                                            <button type="button" class="accordion-play"><span>Introduction</span><i class="bi bi-play"></i></button>
+                                        </div>
+                                        <div class="accordion-body">
+                                            <button type="button" class="accordion-play"><span>Introduction</span><i class="bi bi-lock"></i></button>
+                                        </div>
+                                      </div>
+                                    </div>                                   
                                   </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-4 col-lg-4">
+                            <div class="detail-video-price">
+                                <h2>
+                                    Join course
+                                </h2>
+                                <div class="price-video">
+                                    $280,000
+                                </div>
+                                <p><small>Pay once. Lifetime access.</small></p>
+                                <a href="#" class="btn btn-primary px-5">Join course</a>
+                                <div class="ingridient-video">
+                                    <h2>
+                                        Ingredients
+                                    </h2>
+                                    <ul class="nav flex-column">
+                                        <li class="nav-item">
+                                        <p class="nav-link">Bawang Putih</p>
+                                            <small class="text-muted">12 kg</small>                                           
+                                        </li>
+                                        <li class="nav-item">
+                                        <p class="nav-link">Pewarna</p>
+                                            <small class="text-muted">1 liter</small>                                           
+                                        </li>
+                                        <li class="nav-item">
+                                        <p class="nav-link">Santan Kit</p>
+                                            <small class="text-muted">1 pack</small>                                           
+                                        </li>
+                                        <li class="nav-item">
+                                        <p class="nav-link">Lee mon</p>
+                                            <small class="text-muted">2 ons</small>                                           
+                                        </li>
+                                       
+                                      </ul>
+                                </div>
+                                <div class="ingridient-video">
+                                    <h2>
+                                        Special Tools
+                                    </h2>
+                                    <ul class="nav flex-column">
+                                        <li class="nav-item">
+                                        <p class="nav-link">Chef Knives</p>
+                                            <small class="text-muted">1 kit</small>                                           
+                                        </li>
+                                        <li class="nav-item">
+                                        <p class="nav-link">Mang kock</p>
+                                            <small class="text-muted">2 variant</small>                                           
+                                        </li>
+                                      </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
