--- a/beverages.html
+++ b/beverages.html
@@ -56,7 +56,7 @@
     <div class="page-content">
         <div class="container">
             <div class="tex-center mt-5">
-                <div class="page-text">
+                <div class="page-text animate__animated animate__rubberBand">
                     <h2>
                         Beverages Recommendations
                     </h2>
@@ -64,7 +64,7 @@
                         Available 12,309 course
                     </h4>
                 </div>
-                <div class="search-beverages">
+                <div class="search-beverages" data-aos="fade-up">
                     <form action="#" >
                         <div class="form-group d-flex">
                             <input type="text" name="search" id="search" class="form-control" placeholder="Search by name or receipt">
@@ -74,7 +74,7 @@
                 </div>
                 <div class="section-category-beverages">
                     <div class="row">
-                        <div class="col-6 col-md-4 col-lg-3">
+                        <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up">
                             <div class="card animate__animated animate__swing">
                                 <a href="detail.html" class="card-img">
                                     <img src="images/food1.png" class="card-img-top img-fluid" alt="...">
@@ -95,7 +95,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 col-md-4 col-lg-3">
+                        <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up">
                             <div class="card animate__animated animate__swing">
                                 <a href="detail.html" class="card-img">
                                     <img src="images/food2.png" class="card-img-top img-fluid" alt="...">
@@ -116,7 +116,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 col-md-4 col-lg-3">
+                        <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up">
                             <div class="card animate__animated animate__swing">
                                 <a href="detail.html" class="card-img">
                                     <img src="images/food3.png" class="card-img-top img-fluid" alt="...">
@@ -137,7 +137,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 col-md-4 col-lg-3">
+                        <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up">
                             <div class="card animate__animated animate__swing">
                                 <a href="detail.html" class="card-img">
                                     <img src="images/food4.png" class="card-img-top img-fluid" alt="...">
@@ -158,7 +158,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 col-md-4 col-lg-3">
+                        <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up">
                             <div class="card animate__animated animate__swing">
                                 <a href="detail.html" class="card-img">
                                     <img src="images/food1.png" class="card-img-top img-fluid" alt="...">
@@ -179,7 +179,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 col-md-4 col-lg-3">
+                        <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up">
                             <div class="card animate__animated animate__swing">
                                 <a href="detail.html" class="card-img">
                                     <img src="images/food2.png" class="card-img-top img-fluid" alt="...">
@@ -200,7 +200,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 col-md-4 col-lg-3">
+                        <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up">
                             <div class="card animate__animated animate__swing">
                                 <a href="detail.html" class="card-img">
                                     <img src="images/food3.png" class="card-img-top img-fluid" alt="...">
@@ -221,7 +221,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 col-md-4 col-lg-3">
+                        <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up">
                             <div class="card animate__animated animate__swing">
                                 <a href="detail.html" class="card-img">
                                     <img src="images/food4.png" class="card-img-top img-fluid" alt="...">
@@ -242,7 +242,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 col-md-4 col-lg-3">
+                        <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up">
                             <div class="card animate__animated animate__swing">
                                 <a href="detail.html" class="card-img">
                                     <img src="images/food1.png" class="card-img-top img-fluid" alt="...">
@@ -264,7 +264,7 @@
                             </div>
                         </div>
                     </div>
-                    <nav aria-label="beverages">
+                    <nav aria-label="beverages" data-aos="fade-up">
                         <ul class="pagination pagination-md justify-content-center mt-3">
                           <li class="page-item active" aria-current="page">
                             <span class="page-link">1</span>
