--- a/detail.html
+++ b/detail.html
@@ -56,7 +56,7 @@
     <div class="page-content">
         <div class="container">
             <div class="tex-center mt-5">
-                <div class="page-text">
+                <div class="page-text animate__animated animate__rubberBand">
                     <h2>
                         Beverages Recommendations
                     </h2>
@@ -75,13 +75,13 @@
                     </div>
                 </div>
                 <div class="detail-video">
-                    <div class="video-play">
+                    <div class="video-play animate__animated animate__bounce">
                         <button type="button" class="video video-btn" data-bs-toggle="modal" data-bs-target="#myModal"></button>
                         <img src="images/pic.png" class="img-fluid" alt="">
                     </div>
                     <div class="row">
                         <div class="col-12 col-md-8 col-lg-8">
-                            <div class="description-video">
+                            <div class="description-video" data-aos="fade-up">
                                 <h2>
                                     About Course
                                 </h2>
@@ -92,7 +92,7 @@
                                     Sauce has the power to make or break a dish, and mastering the art of making a sauce is a skill that every chef needs to perfect. This lesson is focused on understanding a roux, mother sauces, and stocks. The practical portion of this lesson will show you how to create a roux and what needs to be done to take it to a finished product.
                                 </p>
                             </div>
-                            <div class="sylabus-video">
+                            <div class="sylabus-video" data-aos="fade-right">
                                 <h2>
                                     Syllabus
                                 </h2>
@@ -105,10 +105,10 @@
                                       </h2>
                                       <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                                         <div class="accordion-body">
-                                            <button type="button" class="accordion-play"><span>Introduction</span><i class="bi bi-play"></i></button>
+                                            <button type="button" class="accordion-play" data-bs-toggle="modal" data-bs-target="#modalAccordion"><span>Introduction</span><i class="bi bi-play"></i></button>
                                         </div>
                                         <div class="accordion-body">
-                                            <button type="button" class="accordion-play"><span>Key points</span><i class="bi bi-play"></i></button>
+                                            <button type="button" class="accordion-play" data-bs-toggle="modal" data-bs-target="#modalAccordion"><span>Key points</span><i class="bi bi-play"></i></button>
                                         </div>
                                         <div class="accordion-body">
                                             <button type="button" class="accordion-play"><span>Download the guide</span><i class="bi bi-lock"></i></button>
@@ -123,10 +123,10 @@
                                       </h2>
                                       <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
                                         <div class="accordion-body">
-                                            <button type="button" class="accordion-play"><span>Introduction</span><i class="bi bi-play"></i></button>
+                                            <button type="button" class="accordion-play" data-bs-toggle="modal" data-bs-target="#modalAccordion"><span>Introduction</span><i class="bi bi-play"></i></button>
                                         </div>
                                         <div class="accordion-body">
-                                            <button type="button" class="accordion-play"><span>Introduction</span><i class="bi bi-play"></i></button>
+                                            <button type="button" class="accordion-play" data-bs-toggle="modal" data-bs-target="#modalAccordion"><span>Introduction</span><i class="bi bi-play"></i></button>
                                         </div>
                                         <div class="accordion-body">
                                             <button type="button" class="accordion-play"><span>Introduction</span><i class="bi bi-lock"></i></button>
@@ -141,10 +141,10 @@
                                       </h2>
                                       <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
                                         <div class="accordion-body">
-                                            <button type="button" class="accordion-play"><span>Introduction</span><i class="bi bi-play"></i></button>
+                                            <button type="button" data-bs-toggle="modal" data-bs-target="#modalAccordion" class="accordion-play"><span>Introduction</span><i class="bi bi-play"></i></button>
                                         </div>
                                         <div class="accordion-body">
-                                            <button type="button" class="accordion-play"><span>Introduction</span><i class="bi bi-play"></i></button>
+                                            <button type="button" class="accordion-play" data-bs-toggle="modal" data-bs-target="#modalAccordion"><span>Introduction</span><i class="bi bi-play"></i></button>
                                         </div>
                                         <div class="accordion-body">
                                             <button type="button" class="accordion-play"><span>Introduction</span><i class="bi bi-lock"></i></button>
@@ -159,10 +159,10 @@
                                       </h2>
                                       <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
                                         <div class="accordion-body">
-                                            <button type="button" class="accordion-play"><span>Introduction</span><i class="bi bi-play"></i></button>
+                                            <button type="button" class="accordion-play" data-bs-toggle="modal" data-bs-target="#modalAccordion"><span>Introduction</span><i class="bi bi-play"></i></button>
                                         </div>
                                         <div class="accordion-body">
-                                            <button type="button" class="accordion-play"><span>Introduction</span><i class="bi bi-play"></i></button>
+                                            <button type="button" class="accordion-play" data-bs-toggle="modal" data-bs-target="#modalAccordion"><span>Introduction</span><i class="bi bi-play"></i></button>
                                         </div>
                                         <div class="accordion-body">
                                             <button type="button" class="accordion-play"><span>Introduction</span><i class="bi bi-lock"></i></button>
@@ -177,10 +177,10 @@
                                       </h2>
                                       <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
                                         <div class="accordion-body">
-                                            <button type="button" class="accordion-play"><span>Introduction</span><i class="bi bi-play"></i></button>
+                                            <button type="button" class="accordion-play" data-bs-toggle="modal" data-bs-target="#modalAccordion"><span>Introduction</span><i class="bi bi-play"></i></button>
                                         </div>
                                         <div class="accordion-body">
-                                            <button type="button" class="accordion-play"><span>Introduction</span><i class="bi bi-play"></i></button>
+                                            <button type="button" class="accordion-play" data-bs-toggle="modal" data-bs-target="#modalAccordion"><span>Introduction</span><i class="bi bi-play"></i></button>
                                         </div>
                                         <div class="accordion-body">
                                             <button type="button" class="accordion-play"><span>Introduction</span><i class="bi bi-lock"></i></button>
@@ -191,7 +191,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <div class="detail-video-price">
+                            <div class="detail-video-price" data-aos="fade-up">
                                 <h2>
                                     Join course
                                 </h2>
@@ -224,7 +224,7 @@
                                        
                                       </ul>
                                 </div>
-                                <div class="ingridient-video">
+                                <div class="ingridient-video" >
                                     <h2>
                                         Special Tools
                                     </h2>
@@ -240,6 +240,71 @@
                                       </ul>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="page-instructor" data-aos="fade-up">
+                        <h2>
+                            Instructor
+                        </h2>
+                        <div class="instructor-comment">
+                            <div class="card mb-3">
+                                <div class="row g-0">
+                                  <div class="col-2 col-md-2">
+                                    <img src="images/img-profile.png" class=" rounded-start" alt="...">
+                                  </div>
+                                  <div class="col-10 col-md-10">
+                                    <div class="card-body">
+                                      <h5 class="card-title">Aika samantha</h5>
+                                      <p class="card-text">Vegan Chef</p>
+                                      <div class="card-star">★ <span>4.8/5</span></div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="comment-instructor">
+                                  <div class="text-comment-instructor">
+                                    Excelent course. Support material and lectures very well prepared. Explanations are clear and objective. It is really possible to learn a lot of Pyhton, specially if you start from zero. Looking forward to go deeply in Python by taking other courses from the author.
+                                  </div>
+                                  <div class="comment-rating">
+                                    <div class="rating">
+                                        <button class="rating_star">☆</button>
+                                        <button class="rating_star">☆</button>
+                                        <button class="rating_star">★</button>
+                                        <button class="rating_star">★</button>
+                                        <button class="rating_star">★</button>
+                                    </div>
+                                  </div>
+                              </div>
+                        </div>
+                        <div class="instructor-comment">
+                            <div class="card mb-3">
+                                <div class="row g-0">
+                                  <div class="col-2 col-md-2">
+                                    <img src="images/img-profile.png" class=" rounded-start" alt="...">
+                                  </div>
+                                  <div class="col-10 col-md-10">
+                                    <div class="card-body">
+                                      <h5 class="card-title">Aika samantha</h5>
+                                      <p class="card-text">Vegan Chef</p>
+                                      <div class="card-star">★ <span>4.8/5</span></div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="comment-instructor">
+                                  <div class="text-comment-instructor">
+                                    Excelent course. Support material and lectures very well prepared. Explanations are clear and objective. It is really possible to learn a lot of Pyhton, specially if you start from zero. Looking forward to go deeply in Python by taking other courses from the author.
+                                  </div>
+                                  <div class="comment-rating">
+                                    <div class="rating">
+                                        <button class="rating_star">☆</button>
+                                        <button class="rating_star">☆</button>
+                                        <button class="rating_star">★</button>
+                                        <button class="rating_star">★</button>
+                                        <button class="rating_star">★</button>
+                                    </div>
+                                  </div>
+                              </div>
                         </div>
                     </div>
                 </div>
@@ -318,6 +383,22 @@
         </div>
     </footer>
 
+    <!--Modal video-->
+    <div class="modal fade" id="modalAccordion" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <!-- 16:9 aspect ratio -->
+                    <div class="ratio ratio-16x9">
+                    <iframe src="https://www.youtube.com/embed/vou24SNu1e0" title="YouTube video player"
+                        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     
     <!--Script-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.slim.min.js" integrity="sha512-6ORWJX/LrnSjBzwefdNUyLCMTIsGoNP6NftMy2UAm1JBm6PRZCO1d7OHBStWpVFZLO+RerTvqX/Z9mBFfCJZ4A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
