--- a/beverages.html
+++ b/beverages.html
@@ -35,7 +35,7 @@
                         <a class="nav-link active" href="beverages.html">Beverages</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Chef</a>
+                        <a class="nav-link" href="profile.html">Chef</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Ingerdient</a>
