--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a class="nav-link" href="beverages.html">Beverages</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Chef</a>
+                        <a class="nav-link" href="profile.html">Chef</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Ingerdient</a>
