--- a/register.html
+++ b/register.html
@@ -52,50 +52,40 @@
 
     <!--Page-->
     <div class="page-hero">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-6 col-lg-6">
-                    <div class="page-hero-title">
-                        <h2>
-                            Sign In to Learn How to Cook
-                        </h2>
-                        <p>
-                            When you eat something that cooked by
-                            yourself, the happiness is priceless.
-                        </p>
-                        <div class="hero-action">
-                            <p class="mt-3">
-                                If you have no account please
-                            </p>
-                            <a href="register.html">                         
-                            register new account
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-6">
-                    <div class="page-form">              
-                            <form>
+        <div class="container">                              
+            <div class="page-form">   
+                <h2>
+                    Let’s Start New Journey
+                </h2>           
+                    <form>
                                 <div class="card">
                                     <div class="mb-3">
-                                      <label for="exampleInputEmail1" class="form-label">Email address</label>
-                                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                      <label for="fullname" class="form-label">Full Name</label>
+                                      <input type="text" class="form-control" id="fullname" aria-describedby="fullname">
                                     </div>
                                     <div class="mb-3">
-                                      <label for="exampleInputPassword1" class="form-label">Password</label>
-                                      <input type="password" class="form-control" id="exampleInputPassword1">
+                                      <label for="receipt" class="form-label">Favorite Receipt</label>
+                                      <input type="text" class="form-control" id="receipt">
                                     </div>                               
-                                    <button type="submit" class="btn btn-primary py-3 w-100">Sign In</button>
-                                </form>
-                                <div class="separator">
-                                    <span class="separator-text">Or continue with</span>
-                                </div>
-                                <div class="action-sosialmedia">
+                                    <div class="mb-3">
+                                      <label for="email" class="form-label">Email Address</label>
+                                      <input type="email" class="form-control" id="email">
+                                    </div>                               
+                                    <div class="mb-3">
+                                      <label for="password" class="form-label">Password</label>
+                                      <input type="password" class="form-control" id="password">
+                                    </div>                               
+                                    <button type="submit" class="btn btn-primary py-3 w-100">Create Account</button>
+                    </form>
+                        <div class="separator">
+                            <span class="separator-text">Or continue with</span>
+                        </div>
+                            <div class="action-sosialmedia">
                                 <div class="mb-3">
                                     <button class="btn btn-sosmed">
                                         <div class="button">
                                             <img src="images/google.png" alt="" class="img-sosmed">
-                                         <span>Sign in with Google</span>
+                                         <span>Sign Up with Google</span>
                                         </div>
                                     </button>
                                 </div>
@@ -103,14 +93,12 @@
                                     <button class="btn btn-sosmed">
                                         <div class="button">
                                             <img src="images/facebook.png" alt="" class="img-sosmed">
-                                         <span>Sign in with Facebook</span>
+                                         <span>Sign Up with Facebook</span>
                                         </div>
                                     </button>
                                 </div>
-                                </div>                      
-                                </div>
-                    </div>
-                </div>
+                            </div>                      
+            </div>                         
             </div>
         </div>
     </div>
